# Meshtastic-Client

./: .gitignore  CLAUDE.md  CMakeLists.txt  FEATURES_TODO.md  README.md  SESSION_PROGRESS.md  TODO.md  packets_20260129_191617.txt
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cmake/: mingw-w64.cmake
docs/: CI_IMPROVEMENTS.md  CODE_IMPROVEMENTS.md
installer/: windows.nsi
proto/meshtastic/: admin.proto  apponly.proto  atak.proto  channel.proto  clientonly.proto  config.proto  connection_status.proto  deviceonly.proto  localonly.proto  mesh.proto  module_config.proto  mqtt.proto  paxcount.proto  portnums.proto  powermon.proto  remote_hardware.proto  rtttl.proto  storeforward.proto  telemetry.proto  xmodem.proto
qml/: MapView.qml
resources/: map.html  resources.qrc  topology.html
scripts/: install-deps-arch.sh  install-deps-fedora.sh  install-deps-ubuntu.sh
src/: AppSettings.cpp  AppSettings.h  AppSettingsTab.cpp  AppSettingsTab.h  BluetoothConnection.cpp  BluetoothConnection.h  ChannelsConfigTab.cpp  ChannelsConfigTab.h  ConfigWidget.cpp  ConfigWidget.h  ConnectionDialog.cpp  ConnectionDialog.h  DashboardStatsWidget.cpp  DashboardStatsWidget.h  Database.cpp  Database.h  DeviceConfig.cpp  DeviceConfig.h  DeviceConfigTab.cpp  DeviceConfigTab.h  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  MeshtasticProtocol.cpp  MeshtasticProtocol.h  MessagesWidget.cpp  MessagesWidget.h  NodeManager.cpp  NodeManager.h  PacketListWidget.cpp  PacketListWidget.h  PositionConfigTab.cpp  PositionConfigTab.h  RadioConfigTab.cpp  RadioConfigTab.h  SerialConnection.cpp  SerialConnection.h  SignalScannerWidget.cpp  SignalScannerWidget.h  (+11 more)
tests/: CMakeLists.txt  DatabaseStub.cpp  test_nodemanager.cpp  test_protocol.cpp
